--- a/ResponsiveWebDesign/landing-page/css/style.css
+++ b/ResponsiveWebDesign/landing-page/css/style.css
@@ -1,17 +1,46 @@
-body, html {
+body, htm, main{
   height: 100%;
   margin: 0;
-  font: 400 15px/1.8 "Lato", serif;
+  font: 400 15px/1.8 "Lato", sans-serif;
   color: #777;
 }
+header{
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+h1{
+  font-family:"Lato", serif;
+  color: black;
+  font-size: 30px;
+  margin-left: 15px;
+}
+#nav-bar{
+  position: relative;
+  top: 0;
+  width: 100%;
+  height: auto;
+  background-color: white; 
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+
+
 ul.topnav {
+    height: auto;
     list-style-type: none;
-    margin: 0;
+    margin-right: 50px;
     padding: 5px 10px 0px 0px;
     overflow: hidden;
     background-color: white;
     color: black;
+    width: 100%;
 }
+
+
 
 ul.topnav li {
   float: left;
@@ -28,7 +57,10 @@ ul.topnav li a {
   
 }
 
-ul.topnav li.right {float: right;}
+ul.topnav li.right {
+  float: right;
+  justify-content: flex-end;
+  }
 
 .info{
   color: #444;
@@ -38,9 +70,8 @@ ul.topnav li.right {float: right;}
   text-align: justify;
 }
 
-p {
 
-}
+
 
 .container{
   display: flex;
@@ -48,30 +79,175 @@ p {
   align-items: center;
 }
 
-#navbar{
-  margin: 0;  
-  
-}
+
 
 .nav-link{
   
 }
 
-#owner{
-  width: 500px;
-}
-
 #header-img{
   width: 70px;
+  margin-left: 40px;
+}
+
+.service{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  
 }
 
 #services{
-  margin-top: 100px;
-  
+  width: 70%;
+  margin-top: 00px;
+  display: flex;
+  flex-direction: column;
 }
 #services-list{
   text-align: center;
 }
+
+#subscription-title{
+  font-size: 25px;
+  margin: 0;
+  color: #fff;
+  letter-spacing: 10px;
+}
+
+.subcription-option{
+  color: #fff;
+  padding: 10px;
+  font-size: 25px;
+  letter-spacing: 10px;
+
+}
+
+.subscription-perks{
+  color: white;
+  font: 17px "Lato", sans-serif;
+  height: 400px;
+}
+
+.subscription-perks li{
+  margin: 0px 10px 20px 10px;
+}
+
+.perk-list {
+  height: 100%;
+}
+
+hr{
+  width: 50%;
+  color: white;
+}
+
+.separator{
+  margin-bottom: 35px;
+  margin-top: 35px;
+  width: 100%;
+}
+#pricing-div{
+  z-index: -1;
+  position:relative; 
+  background-color:#282E34;
+  padding: 50px 25px 50px 25px;
+}
+.quote-div{
+  position:relative; 
+  background-color:#282E34;
+  padding: 50px 25px 50px 25px;
+  width: 100%px;
+}
+.pricing-container{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.pricing-tier{
+  min-width:300px;
+  width: 25%;
+  height: 550px;
+  margin: 50px 10px 50px 10px; 
+  border: solid 3px white;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
+.price{
+  color: #fff;
+  padding: 10px;
+  text-transform: lowercase;
+  letter-spacing: 5px;
+}
+
+.selectplan-button{
+  color: white;
+  margin: 0px 10px 30px 10px;
+  width: 200px;
+  font-size: 35px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid white;
+  font-weight: 100;
+  cursor:pointer;
+}
+
+
+
+
+#newsletter{
+  color: #444;
+  background-color:white;
+  text-align:center;
+  padding:50px 80px;
+  text-align: justify;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#email{
+  font-size: 25px;
+  margin: 30px 0px 30px 0px;
+  width: 100%;
+}
+
+#email-form{
+  align-text: center;
+
+}
+
+
+#submit{
+  margin: 20px 10px 20px 10px;
+  width: 200px;
+  font-size: 35px;
+  background-color: gold;
+  border-radius: 5px;
+  border: 1px solid black;
+  font-weight: 100;
+  cursor:pointer;
+}
+#form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+footer{
+  padding: 20px;
+  color: white;
+  background-color: black;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 .bgimg-1, .bgimg-2, .bgimg-3 {
@@ -84,21 +260,30 @@ p {
 
 }
 .bgimg-1 {
+  z-index: -1;
+  margin-top: 100px;
   background-image: url("https://www.forexboat.com/wp-content/uploads/2017/02/Candlestick.jpg");
   min-height: 400px;
 }
 
 .bgimg-2 {
+  z-index: -1;
   background-image: url("https://forex-hero.com/wp-content/uploads/2017/10/forex-hero-main-page-slider-2.jpg");
   min-height: 400px;
   opacity: 0.75;
 }
 
 .bgimg-3 {
+  z-index: -1;
   background-image: url("http://bsnscb.com/data/out/199/40005805-trading-wallpapers.jpeg");
   min-height: 400px;
 }
-
+.video-div{
+  display: flex;
+  item-align: center;
+  justify-content: center;
+  height: 500px;
+}
 .caption {
   position: absolute;
   left: 0;
@@ -141,11 +326,6 @@ h5 {
   font: 17px "Lato", sans-serif;
   color: #111;
 }
-.service{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .icon{
   display: flex;
@@ -166,10 +346,18 @@ h5 {
   padding: 5px;
 }
 
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: static;
+}
 .desc-info{
   margin: 0;
 }
-
+#about{
+  width: 75%;
+}
 .about-info{
   text-align: center;
   font-size: 20px;
@@ -181,6 +369,31 @@ h5 {
     }
 }
 @media screen and (max-width: 600px){
-    ul.topnav li.right, 
-    ul.topnav li {float: none; text-align: center;}
+  .bgimg-1 {
+      margin-top: 400px;
+  }
+  #nav-bar{
+    flex-direction: column;
+  }
+  ul.topnav li.right, 
+  ul.topnav li {float: none; text-align: center;}
+  .service{
+    flex-direction: column;
+    
+  }
 }
+
+@media screen and (max-width: 700px){
+    
+}
+@media screen and (max-width: 800px) {
+  .service{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .desc{
+    margin-left: 10px;
+  }
+}
+  
+
