--- a/ResponsiveWebDesign/landing-page/css/style.css
+++ b/ResponsiveWebDesign/landing-page/css/style.css
@@ -8,6 +8,7 @@ header{
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 h1{
   font-family:"Lato", serif;
@@ -69,18 +70,6 @@ ul.topnav li.right {
   padding:50px 80px;
   text-align: justify;
 }
-
-
-
-
-.container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-
 .nav-link{
   
 }
@@ -94,7 +83,6 @@ ul.topnav li.right {
   width: 100%;
   display: flex;
   align-items: center;
-  
 }
 
 #services{
@@ -147,7 +135,7 @@ hr{
   width: 100%;
 }
 #pricing-div{
-  z-index: -1;
+  z-index: 0;
   position:relative; 
   background-color:#282E34;
   padding: 50px 25px 50px 25px;
@@ -171,6 +159,7 @@ hr{
   height: 550px;
   margin: 50px 10px 50px 10px; 
   border: solid 3px white;
+  border-radius: 10px;
   display: flex;
   flex-direction: column; 
   align-items: center;
@@ -181,6 +170,7 @@ hr{
   padding: 10px;
   text-transform: lowercase;
   letter-spacing: 5px;
+  
 }
 
 .selectplan-button{
@@ -193,6 +183,7 @@ hr{
   border: 1px solid white;
   font-weight: 100;
   cursor:pointer;
+  
 }
 
 
@@ -263,7 +254,7 @@ footer{
   z-index: -1;
   margin-top: 100px;
   background-image: url("https://www.forexboat.com/wp-content/uploads/2017/02/Candlestick.jpg");
-  min-height: 400px;
+  min-height: 500px;
 }
 
 .bgimg-2 {
