--- a/ResponsiveWebDesign/technical-documentation-page/css/style.css
+++ b/ResponsiveWebDesign/technical-documentation-page/css/style.css
@@ -29,6 +29,8 @@ body{
   width: 300px;
   min-width: 250px;
   height: 100%;
+  overflow: auto;
+  white-space: nowrap;
   
 }
 
@@ -70,6 +72,15 @@ body{
 .nav-link{
   width: 100%;
   cursor: pointer;
+  text-decoration: none;
+  color: #DDD;
+}
+
+.nav-sublink{
+  width: 100%;
+  cursor: pointer;
+  text-decoration: none;
+  color: #DDD;
 }
 
 .topic-list{
@@ -104,3 +115,57 @@ body{
   margin-left: 30px;
 }
 
+.screenshot{
+  max-width: 70%;
+  height: auto;
+  margin: 20px 20px 20px 50px;
+  min-width: 400px;
+
+}
+
+.text-info{
+  margin: 0 30px 20px 30px;
+  width: 70%;
+}
+
+#orders-list{
+  margin: 20px 30px 20px 30px;
+}
+
+.code{
+  width: 70%;
+  display: block;
+  white-space: pre-wrap; 
+  text-align: left;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #f0f0f0;
+  padding: 15px;
+  margin: 10px 10px 10px 30px;
+  border-radius: 5px;
+  
+}
+
+@media screen and (max-width: 600px) {
+  #navbar{
+    position: absolute;
+    top: 0;
+    padding: 0; 
+    margin: 0;
+    width: 100%;
+    max-height: 275px;
+    z-index: 1;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  #main-doc{
+    margin-left: 0px;
+    margin-top: 300px;
+    width: auto;
+  }
+  
+  
+}
