--- a/ResponsiveWebDesign/portfolio-page/css/style.css
+++ b/ResponsiveWebDesign/portfolio-page/css/style.css
@@ -18,7 +18,27 @@ body, html {
 #navbar {
   width: 100%;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 1;
+  background-color: #222;
+  padding-right: 30px;
+}
+
+.nav-link:hover {
+  color: #43acc9;
+  transition: .2s color;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: white;
+  margin: 0px 20px 0px 20px;
 }
 
 #welcome-section {
@@ -380,6 +400,11 @@ form textarea {
   color: white;
 }
 
+.fa:hover {
+  color: #43acc9;
+  transition: .3s color;
+}
+
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-width: 1024px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
@@ -466,6 +491,15 @@ form textarea {
   #title-container p {
     font-size: 22px;
     text-align: center;
+  }
+
+  #navbar {
+    justify-content: space-around;
+    padding: 0;
+  }
+
+  .navlink {
+    margin: 0;
   }
 }
 @media screen and (max-width: 500px) {
