--- a/ResponsiveWebDesign/portfolio-page/scss/style.scss
+++ b/ResponsiveWebDesign/portfolio-page/scss/style.scss
@@ -20,8 +20,30 @@ body, html {
 #navbar{
   width: 100%;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 1;
+  background-color: #222;
+  padding-right: 30px;
 }
+
+
+.nav-link:hover{
+  color: $blue;
+  transition: .2s color;
+}
+
+.nav-link{
+  text-decoration: none;
+  color: white;
+  margin: 0px 20px 0px 20px;
+}
+
 
 #welcome-section{
   height: 100%;
@@ -39,6 +61,7 @@ body, html {
   height: 0px;
 }
 .bgimg-1{
+  
   height: 550px;
   z-index: 0;
   position: relative;
@@ -378,6 +401,11 @@ form {
   color: white;
 }
 
+.fa:hover{
+  color: $blue;
+  transition: .3s color;
+}
+
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-width: 1024px) {
@@ -475,6 +503,16 @@ form {
   #title-container p{
     font-size: 22px;
     text-align: center;
+  }
+  
+  #navbar{
+    justify-content: space-around;
+    padding: 0;
+    
+  }
+  
+  .navlink{
+    margin: 0;
   }
 }
 
