--- a/FrontEndLibraries/drum-machine/src/App.css
+++ b/FrontEndLibraries/drum-machine/src/App.css
@@ -1,5 +1,11 @@
+#root{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
