--- a/FrontEndLibraries/drum-machine/src/Controls.css
+++ b/FrontEndLibraries/drum-machine/src/Controls.css
@@ -10,3 +10,13 @@
 #controls-container{
   text-align: center;
 }
+
+#display{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: solid black 2px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
