--- a/FrontEndLibraries/drum-machine/src/DrumMachine.css
+++ b/FrontEndLibraries/drum-machine/src/DrumMachine.css
@@ -5,8 +5,9 @@
   border: 3px solid black;
   display: flex;
   flex-direction: row;
-  
+  background: grey;
   margin: 10px;
+  border-radius: 10px;
 }
 
 #drum-pad-container{
