--- a/FrontEndLibraries/drum-machine/src/DrumMachine.css
+++ b/FrontEndLibraries/drum-machine/src/DrumMachine.css
@@ -2,10 +2,10 @@
 #drum-machine{
   width: 600px;
   height: 350px;
-  border: 3px solid black;
+  border: 3px solid darkgrey;
   display: flex;
   flex-direction: row;
-  background: grey;
+  background-image: linear-gradient(to right, black, grey);
   margin: 10px;
   border-radius: 10px;
 }
@@ -20,12 +20,85 @@
 .drum-pad{
   width: 90px;
   height: 75px;
-  border: 1px solid darkgrey;
-  background: grey;
   border-radius: 5px; 
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.drum-pad:first-child{
+  background-color: #52ba92;
+}
+
+.drum-pad.light-up:first-child{
+  background-color: #73ffc7;
+  
+}
+
+.drum-pad:nth-child(2){
+  background-color: #c73710;
+}
+
+.drum-pad.light-up:nth-child(2){
+  background-color: #ff4511;
+  
+}
+
+.drum-pad:nth-child(3){
+  background-color: #d1c12d;
+}
+
+.drum-pad.light-up:nth-child(3){
+  background-color: #ffeb37; 
+}
+
+.drum-pad:nth-child(4){
+  background-color: #c43fbb;
+}
+
+.drum-pad.light-up:nth-child(4){
+  background-color: #ff52f3; 
+}
+
+.drum-pad:nth-child(5){
+  background-color: #58b030;
+}
+
+.drum-pad.light-up:nth-child(5){
+  background-color: #84ff46;
+}
+
+.drum-pad:nth-child(6){
+  background-color: #518aa8;
+}
+
+.drum-pad.light-up:nth-child(6){
+  background-color: #7bd1ff; 
+}
+
+.drum-pad:nth-child(7){
+  background-color: #ed7d9e;
+}
+
+.drum-pad.light-up:nth-child(7){
+  background-color: #ff3370; 
+}
+
+.drum-pad:nth-child(8){
+  background-color: #e36e00;
+}
+
+.drum-pad.light-up:nth-child(8){
+  background-color: #ff7b00; 
+}
+
+.drum-pad:nth-child(9){
+  background-color: #9e9e9e;
+}
+
+.drum-pad.light-up:nth-child(9){
+  background-color: #e0dedc; 
 }
 
 #control-pad{
