--- a/FrontEndLibraries/drum-machine/src/index.css
+++ b/FrontEndLibraries/drum-machine/src/index.css
@@ -1,5 +1,6 @@
 body {
-  background: black;
+  background: url(http://www.freepptbackgrounds.net/wp-content/uploads/2017/07/Green-Mixer-Background.jpg);
+  background-size: cover;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
