--- a/FrontEndLibraries/calculator/src/Calculator.css
+++ b/FrontEndLibraries/calculator/src/Calculator.css
@@ -1,30 +1,49 @@
 #calc-container{
-  width: 360px;
+  width: 28vw;
   height: auto;
-  border: 1px black solid;
+  border: 0.1vw black solid;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: black;
-      box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      box-shadow: 0 1vw 1vw 0 rgba(0, 0, 0, 0.4), 0 1vw 2vw 0 rgba(0, 0, 0, 0.19);
 }
 
-#display{
+#screen{
   width: 100%;
-  height: 140px;
+  min-height: 20vh;
+  height: auto;
   display: flex;
   flex-direction: column;
 }
 
 #operations{
-  height: 45%;
+  height: auto;
+  min-height: 9vh;
   width: 100%;
+  text-align: right;
+  vertical-align: text-top;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  flex-direction: row;
+  font-size: 2vw;
+  /* color: #F7C3D2; */
+  color: lightsalmon;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  
 }
 
-#result{
+#display{
   height: 55%;
   width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: row;
+  font-size: 2.5vw;
+  color: white;
 }
 
 #pad-container{
@@ -32,11 +51,11 @@
   display: grid;
   grid-template-columns: auto auto auto auto;
   grid-template-areas: 
-    'clear clear percentage div'
-    'seven eight nine mult'
-    'four five six add'
-    'one two three subs'
-    'zero dot equal equal';
+    'clear clear module divide'
+    'seven eight nine multiply'
+    'four five six subtract'
+    'one two three add'
+    'zero decimal equals equals';
   margin: 0;
   padding: 0;
 }
@@ -45,12 +64,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
+  font-size: 3.5vh;
   width: auto;
-  height: 90px;
+  height: 12vh;
   margin: 0;
   padding: 0;
+  cursor: pointer;
 }
+
+.button:hover{
+  -webkit-box-shadow: inset 0px 0px 150px -87px rgba(255,255,255,1);
+-moz-box-shadow: inset 0px 0px 150px -87px rgba(255,255,255,1);
+box-shadow: inset 0px 0px 150px -87px rgba(255,255,255,1);
+}
+
 
 .silver{
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
