--- a/FrontEndLibraries/calculator/src/index.css
+++ b/FrontEndLibraries/calculator/src/index.css
@@ -1,6 +1,6 @@
 body{
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   
   margin: 0;
   padding: 0;
@@ -9,12 +9,12 @@ body{
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d98fea+0,fe9090+100,f7adad+100 */
-background: rgb(217,143,234); /* Old browsers */
-background: -moz-linear-gradient(-45deg, rgba(217,143,234,1) 0%, rgba(254,144,144,1) 100%, rgba(247,173,173,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(-45deg, rgba(217,143,234,1) 0%,rgba(254,144,144,1) 100%,rgba(247,173,173,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(135deg, rgba(217,143,234,1) 0%,rgba(254,144,144,1) 100%,rgba(247,173,173,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d98fea', endColorstr='#f7adad',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f2aef2+18,f7c3d2+53,fca6a6+88 */
+background: rgb(242,174,242); /* Old browsers */
+background: -moz-linear-gradient(-45deg, rgba(242,174,242,1) 18%, rgba(247,195,210,1) 53%, rgba(252,166,166,1) 88%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, rgba(242,174,242,1) 18%,rgba(247,195,210,1) 53%,rgba(252,166,166,1) 88%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, rgba(242,174,242,1) 18%,rgba(247,195,210,1) 53%,rgba(252,166,166,1) 88%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2aef2', endColorstr='#fca6a6',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   
 }
 
