--- a/FrontEndLibraries/pomodoro-clock/src/App.css
+++ b/FrontEndLibraries/pomodoro-clock/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items:center;
+  justify-content:flex-start;
   flex-direction: column;
   height: 100vh;
 }
