--- a/DataVisualization/treemap-diagram/treemap.css
+++ b/DataVisualization/treemap-diagram/treemap.css
@@ -4,6 +4,9 @@ body {
   margin: auto;
   position: relative;
   width: 1000px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 
