Fixed bottom link in time-parser project

--- a/ApisAndMicroServices/header-parser/views/index.html
+++ b/ApisAndMicroServices/header-parser/views/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="http://www.freecodecamp.com">Ivan Chavez Escamilla</a> | <a href="https://hyperdev.com/#!/remix/FCC_API_header_bplate/8c449aa9-a80c-47ad-8142-8da90f658731">Click here to Remix</a>
+          by <a href="https://www.freecodecamp.org/fccc931a348-711f-4df2-af61-62b2e43c793a">Ivan Chavez Escamilla</a> | <a href="https://hyperdev.com/#!/remix/FCC_API_header_bplate/8c449aa9-a80c-47ad-8142-8da90f658731">Click here to Remix</a>
         </p>
       </div>
    </body>
